using System;

namespace MineSweeper.Models
{
    public class Board
    {
        public int rows = 10;
        public int cols = 10;
        public int mineCount = 15;

        public Cell[,] Cells { get; private set; }

        public Board()
        {
            Cells = new Cell[rows, cols];
            for (int r = 0; r < rows; r++)
            {
                for (int c = 0; c < cols; c++)
                {
                    Cells[r, c] = new Cell(r, c);
                }
            }
        }

        public Board(int rows, int cols, int mineCount)
        {
            this.rows = rows;
            this.cols = cols;
            this.mineCount = mineCount;
            Cells = new Cell[rows, cols];
            for (int r = 0; r < rows; r++)
            {
                for (int c = 0; c < cols; c++)
                {
                    Cells[r, c] = new Cell(r, c);
                }
            }
        }

        public void Initialize(int firstRow, int firstCol)
        {
            for (int r = 0; r < rows; r++)
            {
                for (int c = 0; c < cols; c++)
                {
                    Cells[r, c] = new Cell(r, c);
                }
            }

            Random rnd = new Random();
            int placedMines = 0;

            while (placedMines < mineCount)
            {
                int r = rnd.Next(rows);
                int c = rnd.Next(cols);
                if ((Math.Abs(r - firstRow) <= 1 && Math.Abs(c - firstCol) <= 1) || Cells[r, c].value == -1) continue;
                Cells[r, c].value = -1;
                placedMines++;
            }

            // 주변 지뢰 수 계산
            for (int r = 0; r < rows; r++)
                for (int c = 0; c < cols; c++)
                {
                    if (Cells[r, c].value == -1) continue;
                    int count = 0;
                    for (int dr = -1; dr <= 1; dr++)
                        for (int dc = -1; dc <= 1; dc++)
                        {
                            int nr = r + dr;
                            int nc = c + dc;
                            if (nr >= 0 && nr < rows && nc >= 0 && nc < cols)
                                if (Cells[nr, nc].value  == -1) count++;
                        }
                    Cells[r, c].value = count;
                }
        }
    }
}
